--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  retrofit: ^3.0.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +54,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   dio: ^4.0.0
+  json_serializable: ^6.1.1
+  retrofit_generator: ^4.0.1
   e_http_inspector:
     path: ../
 
